infrastructure/cicsk8s/galasa-prod/galasa-prod/namespace-galasa-prod.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: v1
kind: Namespace
metadata:
  name: galasa-prod
