infrastructure/cicsk8s/galasa-prod/galasa-prod/simbank.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: simbank
  namespace: galasa-prod
  labels:
    app: simbank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simbank
  template:
    metadata:
      name: simbank
      labels:
        app: simbank
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        applevel: critical
      containers:
      - name: simbank
        image: ghcr.io/galasa-dev/simplatform-jar:main
        imagePullPolicy: Always
        command: ["java"]
        args: 
        - -jar
        - simplatform.jar
        ports:
        - containerPort: 2023
          name: telnet
        - containerPort: 2080
          name: webservice
        - containerPort: 2027
          name: database
        - containerPort: 2040
          name: zosmf
