infrastructure/cicsk8s/galasa-prod/galasa-prod/server-dss-etcd3.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dss
  namespace: galasa-prod
  labels:
    app: dss
spec:
  serviceName: dss
  replicas: 3
  selector:
    matchLabels:
      app: dss
  template:
    metadata:
      name: dss
      labels:
        app: dss
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        longhorn: "true"
        applevel: critical
      containers:
      - name: etcd
        image: quay.io/coreos/etcd:v3.2.25
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2379
          name: peer
        - containerPort: 2380
          name: client
        volumeMounts:
        - name: data
          mountPath: /var/run/etcd
        lifecycle:
          preStop:
            exec:
              command:
                - "/bin/sh"
                - "-ec"
                - |
                  [...]
        command:
          - "/bin/sh"
          - "-ec"
          - |
            [...]
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - dss
              topologyKey: kubernetes.io/hostname
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          # upstream recommended max is 700M
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: dss
  namespace: galasa-prod
  labels:
    app: dss
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
  - port: 2379
    name: etcd-server
  - port: 2380
    name: etcd-client
  selector:
    app: dss
