infrastructure/cicsk8s/galasa-prod/galasa-prod/codecov-ingress.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codecov-ingress
  namespace: galasa-prod
spec:
  ingressClassName: nginx
  rules:
  - host: "galasadev-galasa-prod.cicsk8s.hursley.ibm.com"
    http:
      paths:
      - pathType: Prefix
        path: "/codecov"
        backend:
          service:
            name: codecov
            port:
              number: 80
  tls:
  - hosts:
    - '*.cicsk8s.hursley.ibm.com'
