infrastructure/cicsk8s/galasa-prod/galasa-prod/semmodels-ingress.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semmodels-ingress
  namespace: galasa-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "semmodels.cicsk8s.hursley.ibm.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: semmodels
            port:
              number: 80
